--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,25 +2,6 @@
     <h2>新增电影</h2>
 
     <hr>
-    <%= form_for @group do |f| %>
-    <% if @group.errors.any? %>
-    <ul>
-      <% @group.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-    <% end %>
-
-
-    名称
-    <%= f.text_field :title %>
-    <br>
-    内容
-    <br>
-    <%= f.text_area :description %>
-    <br>
-
-    <%= f.submit "Submit", :disable_with => 'Submiting...' %>
-    <% end %>
+    <%= render "form" %>
 
 </div>
