--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,13 @@
 <div class="col-md-12">
   <div class="group">
+
+    <span class="pull-right">
+  <% if current_user && current_user.is_member_of?(@group) %>
+    <label class="label label-success"> 己收藏本影片 </label>
+  <% else %>
+    <label class="label label-warning"> 未收藏本影片 </label>
+  <% end %>
+</span>
     <%= link_to("发表评论", new_group_post_path(@group), class: "btn btn-default pull-right")%>
     <% if current_user && current_user == @group.user %>
     <%= link_to("编辑", edit_group_path(@group), class: "btn btn-primary pull-right")%>
