--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,8 +4,10 @@
     <span class="pull-right">
   <% if current_user && current_user.is_member_of?(@group) %>
     <label class="label label-success"> 己收藏本影片 </label>
+     <%= link_to("取消收藏本影片", quit_group_path(@group), method: :post, class: "btn btn-default") %>
   <% else %>
     <label class="label label-warning"> 未收藏本影片 </label>
+    <%= link_to("收藏本影片", join_group_path(@group), method: :post, class: "btn btn-default") %>
   <% end %>
 </span>
     <%= link_to("发表评论", new_group_post_path(@group), class: "btn btn-default pull-right")%>
