--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -12,22 +12,8 @@
       </tr>
     </thead>
     <tbody>
-      <% @groups.each do |group| %>
-        <tr>
-          <td>#</td>
-          <td><%= link_to(group.title, group_path(group)) %></td>
-          <td><%= render_group_description(group) %></td>
-          <td> <%= group.user.email %> </td>
+      <%= render :partial => "group_item", :collection => @groups, :as => :group %>
 
-          <td>
-             <% if current_user && current_user == group.user %>
-              <%= link_to("编辑", edit_group_path(group), class: "btn btn-sm btn-default")%>
-              <%= link_to("删除", group_path(group),    class: "btn btn-sm btn-default",
-                          method: :delete, data: { confirm: "Are you sure?" } )%>
-                          <% end %>
-          </td>
-        </tr>
-      <% end %>
     </tbody>
   </table>
 </div>
